# gazebo_pgm_ws

./: CMakeLists.txt  README.md  build.sh  map_config.json
gui/: map_creator_gui.py
include/: map_creator_core.h
scripts/: generate_map_auto.py
src/: gazebo_map_creator_plugin.cpp  gazebo_map_creator_plugin_auto.cpp  map_creator_cli.cpp  map_creator_core.cpp
